Product page alignment fix

--- a/src/pages/product/Product.module.css
+++ b/src/pages/product/Product.module.css
@@ -179,6 +179,7 @@
 .details_container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 .contact_button {
